# myrobot

./: CMakeLists.txt  README.md  demo0.cpp  demo1.cpp  main.cpp
DEBUG/: CMakeCache.txt  Demo1.cbp  Makefile  cmake_install.cmake
DEBUG/.cmake/api/v1/reply/: cache-v2-df4bac4dffb5ad2ffb3e.json  cmakeFiles-v1-089ac9587ba41dca89ce.json  codemodel-v2-4e6c6e70ee91dee973b7.json  codemodel-v2-aedc318ab784358da917.json  index-2023-04-26T08-54-51-0135.json  index-2023-04-26T10-58-17-0414.json  target-Demo1-Debug-b37cee747e6ba8fcc6cb.json  target-Demo1-Debug-de91ea32c1289c9a1f46.json  target-comlib-Debug-27ed786bff959ffb632c.json  target-datarecordlib-Debug-3728a1f98fe770aa00ad.json  target-dplib-Debug-5ee82b1423aacc42d218.json  target-socketlib-Debug-3ad38b7f5e345832fd06.json
RELEASE/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
RELEASE/.cmake/api/v1/reply/: cache-v2-3fc762d9596e42413dab.json  cmakeFiles-v1-4f4d5d3c941b876f34f6.json  cmakeFiles-v1-6e69f77de0616740fe70.json  codemodel-v2-4be58b43670eb576ee8d.json  codemodel-v2-6ca2b0041f4ac99e766a.json  index-2023-04-26T08-54-51-0070.json  index-2023-04-26T10-58-18-0524.json  target-Demo1-Release-740a79a98c81b7884dd1.json  target-Demo1-Release-ed2e075a0e1674370cbe.json  target-comlib-Release-6752643f24c9e46c1ee9.json  target-datarecordlib-Release-6218814d971b7518b4ad.json  target-dplib-Release-3e5139f4986ebe75248a.json  target-driverlib-Release-419659da3b33c171312f.json  target-motion-Release-a6aa438f0ff318583fab.json  target-mtlib-Release-7504b63d75b775a17b0e.json  target-socketlib-Release-ce7ff8264e850f2c053d.json  target-timecountlib-Release-84cdde08e6726c10bb0c.json  toolchains-v1-e846502879b24f5487b0.json
inc/: ADDRESS_DEFINE.h  ADS.h  Data_Define.h  Data_Process.h  MOTION.h  Mysocket.h  ReadTXT.hpp  Servo_DRIVE.h  Servo_Driver.h  TcAdsAPI.h  TcAdsDef.h  TimerCounter.h  data_record.h  myThreadfuc.h  variable.h
src/: Ads_Com.cpp  Data_Process.cpp  Servo_DRIVE.cpp  Servo_Driver.cpp  TimerCounter.cpp  data_record.cpp  motion.cpp  mySocket.cpp  myThreadfuc.cpp
